# advent-of-code

./: .gitignore  README.md  run
2015/1/: day1p1.cpp  day1p2.cpp
2015/2/: day1p1.cpp
2016/1/: p2.R
2025/1/: part1.php  part2.php
2025/10/: .gitignore  CMakeLists.txt  main.cpp  main_backup.cpp  main_old_brootforce.cpp
2025/11/: main.cpp  main_b.cpp  slow.out
2025/12/: s.py
2025/2/: README.md  day2.sb3  day2_p2.sb3
2025/3/day3/: example.txt
2025/3/day3/src/: Main.java
2025/4/: p1.R  p2.R
2025/5/5/: .gitignore  Program.cs  p1.cs
2025/6/: p1.py  p2.py
2025/7/: p1.py  p2.py
2025/8/: p1.py  p2.py
2025/9/: p1.py  p1_d.py  p2.py  profile.py
2025/cpp_libs/: string_stuff.cpp  string_stuff.h
cpp/: template
cpp/2015/: 01.cpp
cpp/libs/: aoc.hpp  string_stuff.hpp
